Complete election platform with voting system, admin dashboard, and candidate management

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,12 @@
-# AWS Configuration
-VITE_AWS_REGION=us-east-1
-VITE_USER_POOL_ID=us-east-1_zfMUmmI7i
-VITE_USER_POOL_CLIENT_ID=o82kd78l2ie1chb3h0223e74k
-VITE_API_GATEWAY_URL=https://YOUR_API_GATEWAY_ENDPOINT.execute-api.us-east-1.amazonaws.com/prod
+# API Configuration
+# Replace with your actual API Gateway URLs after deployment
 
-# Development
-VITE_APP_NAME=Stotra Elections Platform
+# Elections API Lambda Function URL
+VITE_ELECTIONS_API_URL=https://your-elections-api-gateway-url
+
+# Candidate Management API Lambda Function URL  
+VITE_CANDIDATE_API_URL=https://your-candidate-management-api-gateway-url
+
+# For development/testing, you can use Lambda function URLs directly:
+# VITE_ELECTIONS_API_URL=https://abcd1234.lambda-url.us-east-1.on.aws
+# VITE_CANDIDATE_API_URL=https://efgh5678.lambda-url.us-east-1.on.aws
